# subgroups

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  b060724.txt  dune-project  garnier_martin_avila.tar  main.bc  output.txt  rho.py  run.sh  subgroups.opam
lib/: FArray.ml  FArray.mli  FStack.ml  FStack.mli  Formula.ml  Formula.mli  Groups.ml  Groups.mli  Lattice.ml  Lattice.mli  Lib.ml  Lib.mli  Matrix.ml  Matrix.mli  Prime.ml  Prime.mli  SortedList.ml  SortedList.mli  dune  matrix.ml
rapport/: subgroups.tex  subgroups_slides.tex  title.tex  utils.sty  utils_slides.sty
soutenance/: soutenance.tex
src/: init.ml
test/: dune  subgroups.ml
