(lang dune 3.6)

(name subgroups)

(generate_opam_files true)

(authors "Garnier Kevin and Martin-Avila Charly")

(documentation https://url/to/documentation)

(package
 (name subgroups)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
